--- a/ProjectRegistroPonto/src/br/com/registro/view/Principal.form
+++ b/ProjectRegistroPonto/src/br/com/registro/view/Principal.form
@@ -41,7 +41,7 @@
                 </MenuItem>
               </SubComponents>
             </Menu>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemPonto">
               <Properties>
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+Alt+P"/>
@@ -51,6 +51,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemPontoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
