--- a/ProjectRegistroPonto/src/br/com/registro/view/TelaHoras.form
+++ b/ProjectRegistroPonto/src/br/com/registro/view/TelaHoras.form
@@ -44,7 +44,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="fc" green="f7" id="Borda de Legenda Inativa" palette="2" red="f4" type="palette"/>
         </Property>
       </Properties>
 
