--- a/ProjectRegistroPonto/src/br/com/registro/view/TelaPrincipal.form
+++ b/ProjectRegistroPonto/src/br/com/registro/view/TelaPrincipal.form
@@ -123,12 +123,12 @@
             <Property name="text" type="java.lang.String" value="Relat&#xf3;rios "/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemRelatorio">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Relat&#xf3;rios de Horas"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemRelatorioActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
